--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cms-prismic",
+  "name": "muzicirovanie",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -10,15 +10,20 @@
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "next": "latest",
-    "prismic-javascript": "3.0.1",
-    "prismic-reactjs": "1.3.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@tailwindcss/typography": "^0.2.0",
+    "@tailwindcss/ui": "^0.5.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.2.0"
+    "prettier": "^2.1.1",
+    "tailwindcss": "^1.7.6"
   },
   "license": "MIT"
 }
