--- a/package.json
+++ b/package.json
@@ -2,28 +2,37 @@
   "name": "muzicirovanie",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^1.0.0",
     "classnames": "2.2.6",
-    "date-fns": "2.10.0",
-    "next": "latest",
+    "date-fns": "2.16.1",
+    "date-fns-tz": "^1.0.10",
+    "firebase": "^7.21.1",
+    "firebase-admin": "^9.2.0",
+    "next": "^9.5.3",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.2",
     "react": "^16.13.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
-    "react-transition-group": "^4.4.1"
+    "react-firebaseui": "^4.1.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^6.8.6",
+    "react-transition-group": "^4.4.1",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.5.0",
+    "@tailwindcss/ui": "^0.6.2",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.1.1",
-    "tailwindcss": "^1.7.6"
+    "prettier": "^2.1.2",
+    "tailwindcss": "^1.8.10"
   },
   "license": "MIT"
 }
